--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,71 +1,164 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles/reset.css">
-   
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Monda&display=swap" rel="stylesheet">
-   
-    <link rel="stylesheet" href="styles/styles.css">
-</head>
-<body>
-    <div class="container">
-        <h1>Современные и стильные интерьеры для комфортной жизни</h1>
-        <div class="InteriorArmchair">
-            <div class="textInteriorArmchair">
-                <p class="weAreATeam">Мы - команда квалифицированных дизайнеров и архитекторов, занимающихся разработкой и реализацией дизайн-проектов</p>
-            </div>
-        </div>
-        <p class="textDescription">о нас</p>
-        <h2 class="studioDescription">
-            Студия основана в 2011 году. Полностью отдаемся проектироанию иреализации интерьеров. К нам обращаются за уютом, индивидуальными решениями и практичностью. Находим конструктивные решения для каждого интерьера, вплоть до каждой детали - нацелены на результат.
-        </h2>
-        <a class="view-services" href="/">Посмотреть услуги</a>    
-       
-        <p class="textDescription">проекты</p>
-        <div class="projectsInterior">
-            <img src="resources/interior sofa.png" alt="здесь картинка">
-            <h3 class="residentialComplex">ЖК ПРАВОБЕРЕЖНЫЙ —  112м² —  2023</h3>
-            <p class="more">Подробнее →</p>
-        </div>
-        <div class="projectsInterior">
-            <img src="resources/interior tv.png" alt="здесь картинка">
-            <h3 class="residentialComplex">ЖК НОРВЕЖСКИЙ ПАРК —  75м² —  2023</h3>
-            <p class="more">Подробнее →</p>
-        </div>
-        <div class="projectsInterior">
-            <img src="resources/interior staircase.png" alt="здесь картинка">
-            <h3 class="residentialComplex">ЖК СОСНОВСКИЕ ОЗЕРА —  94м² —  2023</h3>
-            <p class="more">Подробнее →</p>
-        </div>
-        
-        <a class="seeProjectsText" href="/">Смотреть все проекты </a>
-        
-          
-    </div>
+body {
+    width: 100%;
+    background: #F5F5F5;
+    font-family: 'Manrope', sans-serif;
+}
 
-    <div class="listServices">
-        <p class="textServices">услуги</p>
-        <div class="servicesContainer">
-            <img src="resources/drawing.png" alt="здесь картинка">
-            <h3 class="serviceDescription">Планировочное решение — от 2500₽/м²</h3>
-        </div>
-        <div class="servicesContainer">
-            <img src="resources/Color palette.png" alt="здесь картинка">
-            <h3 class="serviceDescription">Дизайн-проект — от 3000₽/м²</h3>
-        </div>
-        <div class="servicesContainer">
-            <img src="resources/ruler.png" alt="здесь картинка">
-            <h3 class="serviceDescription">Авторский надзор — от 30 000₽ в месяц</h3>
-        </div>
-        <div class="servicesContainer servicesContainer_end">
-            <img src="resources/warehouse with flights.png" alt="здесь картинка">
-            <h3 class="serviceDescription">Комплектация — 5% от стоимости спецификации</h3>
-        </div>
-    </div>  
+.container {
+    width: 1400px;
+    margin: 0 auto;
+    background: #ffffff;
+    padding: 125px;
+    box-sizing: border-box;
+}
 
-</body>
-</html>
+h1 {
+    width: 956px;
+    height: 120px;
+    font-family: 'Manrope', sans-serif;
+    font-style: normal;
+    font-size: 60px;
+    line-height: 60px;
+    letter-spacing: -0.03em;
+    color: #000000;
+    margin-bottom: 30px;
+}
+
+.weAreATeam {
+    font-family: 'Manrope', sans-serif;
+    font-style: normal;
+    font-size: 20px;
+    line-height: 27px;
+    letter-spacing: -0.03em;
+    color: #ffffff;
+}
+
+.InteriorArmchair {
+    position: relative;
+    width: 1150px;
+    height: 500px;
+    background-image: url('../resources/interior armchair.png');
+}
+
+.textInteriorArmchair {
+    position: absolute;
+    width: 430px;
+    height: 81px;
+    bottom: 40px;
+    left: 40px;   
+}
+
+.textDescription {
+    margin-top: 150px;
+    width: 51px;
+    height: 25px;
+    font-family: 'Manrope', sans-serif;
+    font-size: 18px;
+    line-height: 25px;
+    letter-spacing: -0.03em;
+    text-transform: uppercase;
+    color: #000000;
+    margin-bottom: 30px;
+}
+
+.studioDescription {
+    width: 1048px;
+    height: 366px;
+    font-family: 'Manrope', sans-serif;
+    font-style: normal;
+    font-size: 45px;
+    line-height: 61px;
+    letter-spacing: -0.03em;
+    color: #000000;
+    margin-bottom: 30px;
+}
+
+
+.view-services {
+    display: inline-block;
+    padding: 20px 40px;
+    background: #AD1818;
+    border-radius: 5px;
+    gap: 10px;
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 20px;
+    line-height: 27px;
+    letter-spacing: -0.03em;
+}
+
+.residentialComplex {
+    margin-top: 15px;
+    font-size: 30px;
+    line-height: 41px;
+    letter-spacing: -0.03em;
+    color: #121212;
+}
+
+.more {
+    margin-top: 15px;
+    margin-bottom: 90px;
+    font-size: 20px;
+    line-height: 27px;
+    letter-spacing: -0.03em;
+    color: #AD1818;
+}
+
+
+.seeProjectsText {
+    display: inline-block;
+    width: 100%;
+    border: 1px solid #AD1818;
+    border-radius: 5px;
+    padding: 56px 0px 56px 0px;
+    text-align: center;
+    font-size: 30px;
+    line-height: 41px;
+    letter-spacing: -0.03em;
+    text-decoration: none;
+    color: #AD1818;
+}
+
+.seeProjectsText:hover {
+    background-color: #AD1818;
+    color:#ffffff;
+}
+
+.listServices {
+    box-sizing: border-box;
+    margin: 0 auto;
+    width: 1400px;
+    padding: 151px 125px 206px 125px;
+    background-color: #121212;
+}
+
+.textServices {
+    color: #ffffff;
+    width: 66px;
+    height: 25px;
+    font-family: 'Manrope', sans-serif;
+    font-size: 18px;
+    line-height: 25px;
+    letter-spacing: -0.03em;
+    text-transform: uppercase;
+    margin-bottom: 34px;
+}
+
+.servicesContainer {
+    width: 1150px;
+    height: 270px;
+    margin-bottom: 116px;
+}
+
+.servicesContainer_end {
+    margin-bottom: 0px;
+}
+
+
+.serviceDescription {
+    font-size: 30px;
+    line-height: 41px;
+    letter-spacing: -0.03em;
+    color: #ffffff;
+    margin-top: 15px;
+}
