--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,7 +4,7 @@ html{
 
 body {
     width: 100%;
-    background: #787272;
+    background: #f5f5f5;
     font-family: 'Manrope', sans-serif;
 }
 
@@ -55,30 +55,19 @@ body {
 }
 
 .navLink:hover {
-    color: #000000;
-    text-decoration: underline;
     opacity: 0.5;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
 }
 
 h1 {
     width: 956px;
     height: 120px;
-    font-family: 'Manrope', sans-serif;
     font-style: normal;
     font-size: 60px;
     line-height: 60px;
     letter-spacing: -0.03em;
     color: #000000;
     margin-bottom: 30px;
-}
-
-.weAreATeam {
-    font-family: 'Manrope', sans-serif;
-    font-style: normal;
-    font-size: 20px;
-    line-height: 27px;
-    letter-spacing: -0.03em;
-    color: #ffffff;
 }
 
 .InteriorArmchair {
@@ -96,11 +85,19 @@ h1 {
     left: 40px;   
 }
 
+.weAreATeam {
+    
+    font-style: normal;
+    font-size: 20px;
+    line-height: 27px;
+    letter-spacing: -0.03em;
+    color: #ffffff;
+}
+
 .textDescription {
     margin-top: 150px;
     width: 51px;
     height: 25px;
-    font-family: 'Manrope', sans-serif;
     font-size: 18px;
     line-height: 25px;
     letter-spacing: -0.03em;
@@ -111,8 +108,7 @@ h1 {
 
 .studioDescription {
     width: 1048px;
-    height: 366px;
-    font-family: 'Manrope', sans-serif;
+    height: 366px; 
     font-style: normal;
     font-size: 45px;
     line-height: 61px;
@@ -195,7 +191,6 @@ h1 {
     color: #ffffff;
     width: 66px;
     height: 25px;
-    font-family: 'Manrope', sans-serif;
     font-size: 18px;
     line-height: 25px;
     letter-spacing: -0.03em;
@@ -255,7 +250,7 @@ h1 {
     margin: 0 auto;
     width: 1400px;
     height: 717px;
-    background-image: url('../resources/interior\ bed.png');
+    background-image: url('/resources/interior\ bed.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
@@ -297,6 +292,7 @@ h1 {
     left: 125px;
     background-image: url(/resources/phone.png);
     background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .contacts {
@@ -331,7 +327,6 @@ h1 {
     letter-spacing: -0.03em;
     color: #121212;
     opacity: 0.5;
-
     text-decoration: none;
     border-bottom: 2px solid #121212;
     opacity: 0.5;
@@ -362,9 +357,12 @@ h1 {
     letter-spacing: -0.03em;
     text-transform: uppercase;
     color: #ffffff;
-    opacity: 0.5;
     text-decoration: none;
     
+}
+
+.boxContactsAboutUs:hover{
+    opacity: 0.5;
 }
 
 .boxContacts {
@@ -374,6 +372,10 @@ h1 {
     text-transform: uppercase;
     color: #ffffff;
     text-decoration: none;
+}
+
+.boxContacts:hover {
+    opacity: 0.5;
 }
 
 .boxContactsServices {
@@ -386,6 +388,10 @@ h1 {
     margin-left: 4px;
 }
 
+.boxContactsServices:hover {
+    opacity: 0.5;
+}
+
 .boxContactsContacts {
     font-size: 18px;
     line-height: 25px;
@@ -396,16 +402,21 @@ h1 {
     margin-left: 2px;
 }
 
+.boxContactsContacts:hover {
+    opacity: 0.5;
+}
+
 .box:nth-last-child(1) {
     margin-right: 0;
 }
 
-.copyright {
+.linkToLayout {
     color: #ffffff;
     margin-left: 509px;
     font-size: 20px;
     line-height: 27px;
     letter-spacing: -0.03em;
     opacity: 0.5;
+    text-decoration: none;
 }
 
