--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,18 +8,17 @@ body {
     font-family: 'Manrope', sans-serif;
 }
 
-.container {
+header {
     width: 1400px;
     margin: 0 auto;
     background: #ffffff;
-    padding: 32.82px 125px 150px 125px;
+    padding: 32.82px 125px 70px 125px;
     box-sizing: border-box;
 }
 
 .navSection {
     width: 1160px;
     box-sizing: border-box;
-    margin-bottom: 70px;
 }
 
 .logoLink {
@@ -59,6 +58,14 @@ body {
     border-bottom: 1px solid rgba(0, 0, 0, 0.5);
 }
 
+.whiteBackground {
+    width: 1400px;
+    margin: 0 auto;
+    background: #ffffff;
+    padding: 0px 125px 150px 125px;
+    box-sizing: border-box;
+}
+
 h1 {
     width: 956px;
     height: 120px;
@@ -66,7 +73,7 @@ h1 {
     font-size: 60px;
     line-height: 60px;
     letter-spacing: -0.03em;
-    color: #000000;
+    color: #121212;
     margin-bottom: 30px;
 }
 
@@ -85,8 +92,7 @@ h1 {
     left: 40px;   
 }
 
-.weAreATeam {
-    
+.weAreATeam { 
     font-style: normal;
     font-size: 20px;
     line-height: 27px;
@@ -96,14 +102,14 @@ h1 {
 
 .textDescription {
     margin-top: 150px;
-    width: 51px;
+    margin-bottom: 30px;
+    width: 100%;
     height: 25px;
     font-size: 18px;
     line-height: 25px;
     letter-spacing: -0.03em;
     text-transform: uppercase;
     color: #000000;
-    margin-bottom: 30px;
 }
 
 .studioDescription {
@@ -118,7 +124,6 @@ h1 {
     margin-left: 3px;
 }
 
-
 .view-services {
     display: inline-block;
     padding: 20px 40px;
@@ -130,6 +135,30 @@ h1 {
     font-size: 20px;
     line-height: 27px;
     letter-spacing: -0.03em;
+}
+
+.imageSofa {
+    height: 500px;
+    background-image: url('../resources/interior\ sofa.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50%;
+}
+
+.imageTv {
+    height: 500px;
+    background-image: url('../resources/interior\ tv.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50%;
+}
+
+.staircase {
+    height: 500px;
+    background-image: url('../resources/interior\ staircase.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50%;
 }
 
 .residentialComplex {
@@ -158,7 +187,6 @@ h1 {
     letter-spacing: -0.03em;
     color: #AD1818;
 }
-
 
 .seeProjectsText {
     display: inline-block;
@@ -250,7 +278,7 @@ h1 {
     margin: 0 auto;
     width: 1400px;
     height: 717px;
-    background-image: url('../resources/interior\ bed.png');
+    background-image: url('/resources/interior\ bed.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
@@ -358,7 +386,6 @@ h1 {
     text-transform: uppercase;
     color: #ffffff;
     text-decoration: none;
-    
 }
 
 .boxContactsAboutUs:hover{
@@ -420,3 +447,157 @@ h1 {
     text-decoration: none;
 }
 
+/* Адаптив для планшета */
+
+@media (max-width: 960px) {
+    .whiteBackground {
+        width: 960px;
+        padding-left: 17px;
+        padding-right: 15px; 
+    }  
+    
+    h1 {
+        width: 802px;
+        height: 120px;
+        font-size: 50px;
+
+    }
+
+    .InteriorArmchair {
+        width: 100%;
+        height: 400px;
+    }
+
+    .textDescription {
+        margin-top: 120px;
+    }
+
+    .studioDescription {
+        width: 690px;
+        height: 336px; 
+        font-size: 35px;
+        line-height: 48px;
+    }
+
+    .imageSofa, .imageTv, .staircase {
+        height: 450px;
+    }
+
+    .residentialComplex {
+        margin-top: 15px;
+        font-size: 25px;
+        line-height: 34px;
+    }
+
+    .moreOne {
+        margin-top: 10px;
+        margin-left: 0px;
+        margin-bottom: 80px;
+    }
+
+    .more {
+        margin-top: 10px;
+        margin-left: 0px;
+        margin-bottom: 80px;
+    }
+}
+
+/* Адаптив для телефона */
+
+@media (max-width: 375px) {
+
+    .whiteBackground {
+        width: 375px;
+        padding-left: 13px;
+        padding-right: 14px; 
+    }  
+    
+    h1 {
+        width: 348px;
+        height: 95px;
+        margin-bottom: 25px;
+        font-size: 30px;
+        line-height: 32px;
+    }
+
+    .InteriorArmchair {
+        width: 100%;
+        height: 304px;
+        background-size: cover;
+    }
+
+    .textInteriorArmchair {
+        position: absolute;
+        width: 312px;
+        height: 88px;
+        bottom: 15px;
+        left: 15px;   
+    }
+
+    .weAreATeam { 
+        font-size: 16px;
+        line-height: 22px;
+    }
+
+    .textDescription {
+        margin-top: 80px;
+        margin-bottom: 20px;
+        font-size: 14px;
+        line-height: 19px;
+    }
+
+    .studioDescription {
+        width: 100%;
+        height: 300px; 
+        font-size: 22px;
+        line-height: 30px;
+    }
+
+    .imageSofa, .imageTv, .staircase {
+        height: 250px;
+    }
+
+    .view-services {
+        padding: 14.5px 27px;
+        border-radius: 3.80172px;
+        gap: 10px;
+        font-size: 16px;
+        line-height: 22px;
+    }
+
+    .interiorPicture {
+        width: 100%;
+        height: 250px;
+    }
+
+    .residentialComplex {
+        margin-top: 20px;
+        font-size: 18px;
+        line-height: 25px;
+    }
+
+    .moreOne {
+        margin-top: 11px;
+        margin-left: 0px;
+        margin-bottom: 49px;
+        font-size: 16px;
+        line-height: 22px;
+    }
+
+    .more {
+        margin-top: 11px;
+        margin-left: 0px;
+        margin-bottom: 49px;
+        font-size: 16px;
+        line-height: 22px;
+    }
+    
+    .seeProjectsText {
+        width: 100%;
+        height: 25.86px;
+        border-radius: 3.80172px;
+        padding: 37px 0px 37.14px 0px;
+        font-size: 22px;
+        line-height: 30px;   
+    }
+}
