--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 @import "/styles/header.css";
-@import "styles/listServices.css";
+@import "./styles/listServices.css";
 @import "/styles/footer.css";
 
 html{
