--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 @import "/styles/header.css";
-@import "/styles/listServices.css";
-@import "/styles/reviews.css";
+@import "../styles/listServices.css";
+@import "../styles/reviews.css";
 @import "/styles/footer.css";
 
 
